[package]
name = "chad_rs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
postgrest = "1.0"
reqwest = { version = "0.11", features = ["json"] }
titlecase = "1.1"
dirs = "3.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.13"
futures = "0.3"
chad-torrent = { git = "https://gitlab.com/Gnurur/chad-torrent" }
enum_dispatch = "0.3"
enum-kinds = "=0.5.0" # Temporary
tokio = { version = "1", features = ["full"] }
