[package]
name = "chad_rs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
postgrest = "1.1"
reqwest = { version = "0.11", features = ["json"] }
titlecase = "1.1"
dirs = "3.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.13"
futures = "0.3"
chad-torrent = { git = "https://gitlab.com/Gnurur/chad-torrent" }
enum_dispatch = "0.3"
enum-kinds = "=0.5.0" # Temporary
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
async-trait = "0.1"
scraper = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
lazy_static = "1.4"
url = "2"
magick_rust = { version = "0.15", optional = true }
steamgriddb_api = { version = "0.1", optional = true }

[features]
default = ["library"]
chad = ["library", "download"]
johncena141 = ["library", "database", "download"]
admin = ["database", "scraping", "banner"]
library = []
database = []
download = []
scraping = ["scraper", "regex"]
banner = ["magick_rust", "steamgriddb_api"]
