[package]
name = "chad_rs"
version = "0.4.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
titlecase = "1.1"
dirs = "3.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
lazy_static = "1.4"

